--- a/res/values/lineage_colors.xml
+++ b/res/values/lineage_colors.xml
@@ -16,7 +16,7 @@
     limitations under the License.
 -->
 <resources>
-    <color name="lineage_accent">#FF9800</color>
+    <color name="lineage_accent">#244BAD</color>
     <color name="button_text">#000000</color>
 
     <color name="navigation_bar_bg">@android:color/white</color>
